# post-ost

./: .gitignore  Dockerfile  Makefile  docker-compose.yaml  docker-compose.yml  entrypoint.sh  pyproject.toml
post_dev/: main.py
post_dev/alembic/: env.py
post_dev/alembic/versions/: 2024_11_07_1730-aca073195f7d_user_table.py
post_dev/api/: __init__.py
post_dev/api/api_v1/: __init__.py  users.py
post_dev/core/: settings.py
post_dev/core/models/: __init__.py  base.py  db_helper.py  user.py
post_dev/utils/: __init__.py  case_converter.py
src/: .env  main.py
src/alembic/: env.py
src/alembic/versions/: 2024_11_18_0200-094be15bdcf9_user_model.py  2024_11_21_1602-30b7e104752d_strategy_table.py  2024_11_21_1715-ab52a4cd0508_strategy_table_unique_constraint.py  2024_11_21_1730-452b5bc8a1ee_uuid_index_strategy.py  2024_11_22_2210-e736ae2b39bd_strategy_foreigh_key_uuid.py  2024_11_23_1248-5d7ba62b48ea_user_id_autoincrement.py
src/api/: dependencies.py
src/api/v1/: __init__.py  login.py  users.py
src/core/: logger.py  settings.py  setup.py
src/core/db/: base.py  db_helper.py
src/core/enums/: symbols.py  unit_time.py
src/core/exceptions/: base.py  db_exceptions.py  handlers.py  http_exceptions.py
src/core/models/: __init__.py  strategy.py  user.py
src/core/schemas/: strategy.py  user.py
src/core/security/: security.py
src/core/utils/: file_manager.py  utils.py  (+1 more)
src/scripts/: create_first_superuser.py
src/strategies/: constants.py
src/utils/: case_converter.py
tests/: conftest.py  test_user.py
tests/helpers/: generator.py  mocks.py
(+13 files in other folders)
